--- a/jaeger-example.yaml
+++ b/jaeger-example.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jaeger-example
+  annotations:
+    "sidecar.jaegertracing.io/inject": "true" # 标记为 sidecar
 spec:
   selector:
     matchLabels:
