--- a/jaeger-example.yaml
+++ b/jaeger-example.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jaeger-example
+  annotations:
+    "sidecar.jaegertracing.io/inject": "true"
 spec:
   selector:
     matchLabels:
@@ -12,7 +14,7 @@ spec:
       labels:
         app: jaeger-example
       annotations:
-        "sidecar.jaegertracing.io/inject": "true" # 标记为 sidecar
+        "sidecar.jaegertracing.io/inject": "true"
     spec:
       containers:
         - name: jaeger-example
