--- a/jaeger-example-opentelemetry.yaml
+++ b/jaeger-example-opentelemetry.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: jaeger-example
+  name: jaeger-example-opentelemetry
   annotations:
     "sidecar.jaegertracing.io/inject": "true"
 spec:
   selector:
     matchLabels:
-      app: jaeger-example
+      app: jaeger-example-opentelemetry
   replicas: 1
   template:
     metadata:
       labels:
-        app: jaeger-example
+        app: jaeger-example-opentelemetry
       annotations:
         "sidecar.jaegertracing.io/inject": "true"
     spec:
       containers:
-        - name: jaeger-example
+        - name: jaeger-example-opentelemetry
           image: togettoyou/jaeger-example:opentelemetry
           ports:
             - containerPort: 8080
@@ -26,11 +26,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: jaeger-example-service
+  name: jaeger-example-opentelemetry-service
 spec:
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: jaeger-example
+    app: jaeger-example-opentelemetry
   type: NodePort
